# backend/internal/model/mp_news_ingest.go
@@ -1,0 +1,11 @@
+package model
+
+type MpNewsIngestRequest struct {
+	MpNewsItem
+}
+
+type MpNewsIngestResponse struct {
+	Ok bool   `json:"ok"`
+	ID string `json:"id"`
+}
+
